Update Decoder creation Rest Action